src/styles/main.css
/* 
%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
     GLOBAL CSS CODES
%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
*/

/* COLOR CODES */

:root {
  --primary: #00acde; /* Blue */
  --primary-dark: #0083b1; /* Dark Blue */

  --est-pri: #1168a3; /* Primary Industry (Base) */
  --est-pri-light: #7aaed4; /* Primary Industry (Alt) */
  --est-sec: #3d7d35; /* Secondary Industry (Base) */
  --est-sec-light: #91b373; /* Secondary Industry (Alt) */
  --est-res: #a11c30; /* Restaurants (Base) */
  --est-res-light: #c57f7d; /* Restaurants (Alt) */
  --est-maj: #782b82; /* Major Establishments (Base) */
  --est-maj-light: #ab7fb0; /* Major Establishments (Alt) */

  --land: #ae5421; /* Landmark (Base) */
  --land-light: #d9a16e; /* Landmark (Alt) */
}

/* DIV FORMATTING */

.div-row {
  display: table;
  width: 100%;
}

.div-column {
  display: table-cell;
}

.div-column-right {
  display: table-cell;
  text-align: right;
}

/* FONTS */

@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@900&family=KoHo:wght@500&family=Sigmar+One&display=swap');

* {
  font-family: 'KoHo', sans-serif;
}

/* 
   BUTTONS
   (Used in both the lobby and the game)
   This one is from cssbuttons.io 
*/

.button {
  appearance: button;
  background-color: var(--primary-dark);
  border: solid transparent;
  border-radius: 16px;
  border-width: 0 0 4px;
  box-sizing: border-box;
  color: #ffffff;
  cursor: pointer;
  display: inline-block;
  font-size: 15px;
  font-weight: 700;
  letter-spacing: 0.8px;
  line-height: 20px;
  margin-left: 3px;
  margin-right: 3px;
  outline: none;
  overflow: visible;
  padding: 7px 15px; /* affects button:active */
  text-align: center;
  text-transform: uppercase;
  touch-action: manipulation;
  transform: translateZ(0);
  transition: filter 0.2s;
  user-select: none;
  -webkit-user-select: none;
  vertical-align: middle;
  white-space: nowrap;
}

.button:after {
  background-clip: padding-box;
  background-color: var(--primary);
  border: solid transparent;
  border-radius: 16px;
  border-width: 0 0 4px;
  bottom: -4px;
  content: '';
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
  z-index: -1;
}

.button:main,
.button:focus {
  user-select: auto;
}

.button:hover:not(:disabled) {
  filter: brightness(1.1);
}

.button:disabled {
  cursor: auto;
}

.button:active:after {
  border-width: 0 0 0px;
}

.button:active {
  padding-bottom: 3px; /* change if adjust padding */
}
/* End imported button code */

/* 
%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
     LOBBY SPECIFIC CSS CODES
%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
*/

/* TITLES */

.title {
  background-color: var(--primary);
  color: white;
  font-family: 'Kanit', 'Sigmar One', cursive;
  font-size: 40pt;
  font-weight: bold;
  text-align: center;
}

.subtitle {
  color: black;
  display: inline-block;
  font-size: 25pt;
  font-weight: bold;
  margin: 20px 0 10px;
  padding: 0 20px;
  text-align: center;
}

/* FOOTER */

.footer {
  background-color: var(--primary);
  bottom: 0;
  color: white;
  font-size: 20px;
  height: 32px; /* image height */
  left: 0;
  padding: 5px;
  position: fixed;
  text-align: center;
  width: 100%;
}

.footer-div {
  position: absolute;
  top: 10px;
  right: 16px;
  font-size: 16px;
}

.footer-body {
  margin-bottom: 50px;
}

/* MATCHMAKING */

.mm-container {
  border-radius: 16px;
  border: solid var(--primary-dark);
  max-width: 800px;
  margin: 2px auto;
  text-align: center;
}

.mm-div-row {
  display: table;
  font-size: 18px;
  text-align: center;
  width: 100%;
}

.mm-div-cell {
  background-color: var(--primary);
  border-radius: 16px;
  border: solid white;
  color: white;
  display: table-cell;
  padding: 1px 10px;
}

.mm-table {
  font-size: 20px;
  table-layout: fixed;
  width: 100%;
}

.mm-td {
  background-color: white;
  border-radius: 16px;
  border: solid var(--primary) 2px;
  color: black;
  overflow-wrap: break-word;
  padding: 5px 10px;
  width: 20%;
}

.mm-td-active {
  border: solid red 4px;
}

/* PLAYER NAME ENTRY */

.padded_div {
  font-size: 20px;
  padding: 3px;
  text-align: center;
}

/* CREATE ROOM */

.input-box {
  border-radius: 10px;
  border: 2px solid #00acdd;
  box-sizing: border-box;
  font-size: 20px;
  margin: 8px 0;
}

select {
  font-size: 20px;
  margin: 2px;
  padding: 6px;
}

/* LOBBY */

.col_matchid {
  min-width: 12ch;
  text-align: center;
}

.col_seats {
  min-width: 5ch;
  text-align: center;
}

.col_setup {
  min-width: 12ch;
  text-align: center;
}

.errorMessage {
  color: red;
  padding: 3px;
  text-align: center;
}

.lobby-container {
  border-radius: 16px;
  border: solid var(--primary);
  margin: 2px auto;
  max-width: 600px;
}

.lobby-div-col {
  display: table-cell;
  max-width: 150px;
  padding: 1px 10px;
  vertical-align: middle;
}

.lobby-div-col-width {
  width: 25vw;
}

.lobby-div-row {
  background-color: var(--primary);
  border-radius: 16px;
  color: white;
  display: table;
  font-size: 18px;
  margin: 5px;
  padding: 1px 5px;
  text-align: center;
  width: 100%;
}

/* 
%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
     GAME SPECIFIC CSS CODES
%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
*/

/* STACK TABLE FORMATTING */

.stack-table {
  margin: 0 auto;
}

/* ACTIONS & ITEM SELECTION */

.clickable {
  cursor: pointer;
}

.inactive {
  background-color: #a0a0a0 !important;
}

.button_active:after {
  background-color: red;
}

.button_hide {
  display: none;
}

/* STATUS BAR */

.status-bar {
  background-color: var(--primary);
  color: white;
  font-size: 18px;
  margin: 5px;
  padding: 2px;
  text-align: center;
}

.status-bar-active {
  background-color: red;
  /*animation: change-color 5s ease-in-out infinite alternate;*/
}

/*@keyframes change-color {
  from {background-color: var(--primary);}
  to {background-color: var(--primary-dark);}
}*/

/* TOOLTIP */

.tooltip {
  visibility: hidden;
  width: 140px;
  background-color: #555;
  color: #fff;
  font-size: 12px;
  text-align: center;
  border-radius: 6px;
  padding: 5px 0;
  position: absolute;
  z-index: 1;
  left: 50%;
  margin-left: -70px;
  opacity: 0;
  transition: opacity 0.3s;
  white-space: pre-line;
}

.est_tooltip {
  top: 60px;
}

.mini_tooltip {
  top: calc(100% + 10px);
}

/* Tooltip arrow */
.mini_tooltip::after {
  content: '';
  position: absolute;
  bottom: 100%;
  left: 50%;
  margin-left: -10px;
  border-width: 10px;
  border-style: solid;
  border-color: transparent transparent #555 transparent;
}

/* ESTABLISHMENTS */

.est_td {
  padding: 3px;
  position: relative;
  height: 120px;
  width: 120px;
  border-radius: 8px;
}

.est_td:hover .tooltip {
  visibility: visible;
  opacity: 1;
}

.est_img_pri {
  background-color: var(--est-pri);
}

.est_img_pri_light {
  background-color: var(--est-pri-light);
}

.est_img_sec {
  background-color: var(--est-sec);
}

.est_img_sec_light {
  background-color: var(--est-sec-light);
}

.est_img_res {
  background-color: var(--est-res);
}

.est_img_res_light {
  background-color: var(--est-res-light);
}

.est_img_maj {
  background-color: var(--est-maj);
}

.est_img_maj_light {
  background-color: var(--est-maj-light);
}

.est_roll {
  color: white;
  position: relative;
  margin: 0 auto;
  top: -45px;
  width: fit-content;
  padding-left: 3px;
  padding-right: 3px;
  text-align: center;
  font-size: 14px;
  font-weight: bolder;
  border-style: solid;
  border-radius: 4px;
}

.est_type {
  color: white;
  font-size: 16px;
  position: absolute;
  right: 5px;
  top: 5px;
}

.est_name {
  color: white;
  font-size: 16px;
  width: 95%;
  text-align: center;
  position: absolute;
  top: 30px;
}

.est_cost {
  color: white;
  font-size: 14px;
  position: absolute;
  left: 5px;
  bottom: 5px;
}

.est_num {
  color: white;
  font-size: 14px;
  position: absolute;
  right: 5px;
  bottom: 5px;
}

/* LOGS */

.log_box {
  border: black solid;
  border-radius: 8px;
  font-size: 12px;
  height: 650px;
  overflow: auto;
  width: 250px;
}

.log_div {
  align-items: center;
  display: flex;
  max-height: 15px;
  white-space: pre;
}

/* PLAYER INFO */

.is_client {
  border: black solid;
  border-radius: 8px;
}

.coin_num {
  color: black;
  font-size: 16px;
  position: relative;
  text-align: left;
  left: 3px; /* to account for the padding */
  top: 5px;
}

.land_td {
  padding: 3px;
  position: relative;
}

.name_div {
  background: white;
  font-size: 14px;
  overflow: hidden;
  width: 90px;
  height: 20px;
}

.name_do_tv {
  cursor: pointer;
  border: red solid;
  border-radius: 8px;
  border-width: 3px;
}

.land_td:hover .tooltip {
  visibility: visible;
  opacity: 1;
}

.land_img {
  background-color: var(--land);
}

.land_img_light {
  background-color: var(--land-light);
}

.mini_td {
  padding: 3px;
  position: relative;
  width: 80px;
  height: 20px;
  border-radius: 8px;
}

.mini_td:hover .tooltip {
  visibility: visible;
  opacity: 1;
}

.mini_roll {
  color: white;
  position: relative;
  margin: 0 auto;
  width: fit-content;
  padding-left: 3px;
  padding-right: 3px;
  text-align: center;
  font-size: 12px;
  font-weight: bolder;
  border-style: solid;
  border-radius: 4px;
}

.mini_type {
  color: white;
  position: absolute;
  font-size: 12px;
  right: 5px;
  top: 5px;
}

.mini_name {
  color: white;
  font-size: 12px;
  width: 95%;
  text-align: center;
  position: absolute;
  top: 5px;
}

